--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <header>
 
-        <div class="head" height="200px">
+        <div class="head" style="height: 100px;">
             <img src="img/logo.svg" alt="booleaner-0" height="50px" style="vertical-align: bottom">
         </div>
 
@@ -69,7 +69,7 @@
         </tbody>
     </table>
 
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue dolore te feugait nulla facilisi.</p>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel <span class="textbg">illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto</span> odio dignissim qui blandit praesent luptatum zzril delenit augue dolore te feugait nulla facilisi.</p>
 
     <footer>
 
